# smart_toilet

./: .gitignore  LICENSE  PLAN_wifi_nrfcloud.md  PROFILING.md  README.md  prov.conf  secure_cloud.conf
app/: CMakeLists.txt  Kconfig  README.rst  VERSION  cloud.conf  debug_net.conf  prj.conf  sysbuild.conf
app/boards/: nrf54lm20dk_nrf54lm20b_cpuapp.overlay
app/certs/: ca-cert.pem  client-cert.pem
app/config/: memfault_metrics_heartbeat_config.def  memfault_platform_config.h
app/dts/bindings/: smart-toilet-flush-actuator.yaml  smart-toilet-flush-button.yaml  smart-toilet-hall-sensor.yaml
app/src/: actuator.c  actuator.h  audio_proc.c  audio_proc.h  audio_snap.c  audio_snap.h  audio_stats.c  audio_stats.h  audio_telemetry.c  audio_telemetry.h  audio_watchdog.c  audio_watchdog.h  cloud.c  cloud.h  control_output.c  control_output.h  dmic.c  dmic.h  leds.c  leds.h  main.c
app/src/ww/: wakeword.c
app/src/ww/models/abracadabra/nrf_edgeai_generated/: nrf_edgeai_user_model_axon.h  nrf_edgeai_user_types.h
app/src/ww/models/shazaam/nrf_edgeai_generated/: nrf_edgeai_user_model.c
app/src/ww/nrf_edgeai_generated/: nrf_edgeai_user_model.c  nrf_edgeai_user_model.h  nrf_edgeai_user_model_axon.h  nrf_edgeai_user_types.h
app/sysbuild/: mcuboot.conf  mcuboot.overlay
docs/: fota-test.md  observability-playbook.md
enclosure/: enclosure.scad  enclosure.stl  magic_symbols.scad
nrfcloud_creds/: 0x7375add3cd4373fb8eb21b114c379f520dfab40f_ca.pem  0x7375add3cd4373fb8eb21b114c379f520dfab40f_ca.srl  0x7375add3cd4373fb8eb21b114c379f520dfab40f_pub.pem  51AF63E40BF36313_crt.pem  51AF63E40BF36313_csr.pem  51AF63E40BF36313_pub.pem  779FC2ACB9E4A24E_crt.pem  779FC2ACB9E4A24E_csr.pem  779FC2ACB9E4A24E_pub.pem  onboard.csv  onboard_result.csv
tools/: uart_monitor.py
